--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 h1 {
-  font-family: 'Helvetica Neue';
-  font-weight: 300;
+  font-family: 'Raleway', sans-serif;';
+  font-weight: 100;
   font-size: 7rem;
 }
