--- a/optionsStyle.css
+++ b/optionsStyle.css
@@ -1,15 +1,29 @@
 h4 {
-  font-family: 'Helvetica Neue';
-  font-weight: 300;
-  font-size: 3rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 1.5rem;
   color: white;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 body {
   background-color: rgba(232, 184, 138, 1);
-  padding-left: 2rem;
-  font-weight: 300;
+  padding-left: 1.5rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
   font-size: 1rem;
   color: white;
+}
+
+br {
+  height: 3rem;
+}
+
+#page {
+  width: 18rem;
+  height: 27rem;
+}
+
+.spacing {
+  height: .5rem;
 }
