--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#all {
+body {
   margin: 0;
   position: absolute;
   height: 100%;
@@ -6,16 +6,21 @@
 }
 
 #textArea {
-  position: absolute;
   width: 100%;
   height: 100%;
   color: white;
   text-align: center;
-  line-height: 38rem;
+}
+
+.spacing {
+  padding-top: 14rem;
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 
 h1 {
   font-family: 'Raleway', sans-serif;';
   font-weight: 100;
-  font-size: 7rem;
+  font-size: 6rem;
+  white-space: normal;
 }
