--- a/indexStyle.css
+++ b/indexStyle.css
@@ -13,9 +13,9 @@ body {
 }
 
 .spacing {
-  padding-top: 14rem;
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
+  padding-top: 20%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 h1 {
@@ -23,4 +23,6 @@ h1 {
   font-weight: 100;
   font-size: 6rem;
   white-space: normal;
+  margin: 0;
+  padding: 0;
 }
